# makemoney

./: .gitignore  MORNING_REPORT.md  beta_paper_track.jsonl  pyproject.toml
docs/: EDGE_HUNT_LOG.md  GO_LIVE_RUNBOOK.md  PRODUCTION_READINESS.md  RESEARCH_CONCLUSION.md  data-limitations.md  kis-api-reference.md  lookahead-audit.md  operations.md  research-protocol.md
forward_data/: _fundamentals.jsonl
research_data/: KOSPI_000100.parquet  KOSPI_000100.parquet.manifest.json  KOSPI_000120.parquet  KOSPI_000120.parquet.manifest.json  KOSPI_000150.parquet  KOSPI_000150.parquet.manifest.json  KOSPI_000240.parquet  KOSPI_000240.parquet.manifest.json  KOSPI_000270.parquet  KOSPI_000270.parquet.manifest.json  KOSPI_000500.parquet  KOSPI_000500.parquet.manifest.json  KOSPI_000660.parquet  KOSPI_000660.parquet.manifest.json  KOSPI_000720.parquet  KOSPI_000720.parquet.manifest.json  KOSPI_000810.parquet  KOSPI_000810.parquet.manifest.json  KOSPI_000880.parquet  KOSPI_000880.parquet.manifest.json  KOSPI_000990.parquet  KOSPI_000990.parquet.manifest.json  KOSPI_001040.parquet  KOSPI_001040.parquet.manifest.json  KOSPI_001120.parquet  KOSPI_001120.parquet.manifest.json  KOSPI_001440.parquet  KOSPI_001440.parquet.manifest.json  KOSPI_001450.parquet  KOSPI_001450.parquet.manifest.json  KOSPI_001720.parquet  KOSPI_001720.parquet.manifest.json  KOSPI_001740.parquet  KOSPI_001740.parquet.manifest.json  KOSPI_001800.parquet  KOSPI_001800.parquet.manifest.json  KOSPI_001820.parquet  KOSPI_001820.parquet.manifest.json  KOSPI_002380.parquet  KOSPI_002380.parquet.manifest.json  (+1369 more)
(+201 files in other folders)
